--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Denifiniçoes gerais */
 
 html, body, figure, img, div, input, textarea, p, h1, h2, h3, ul, li ,a, main{
@@ -165,6 +164,9 @@ footer nav .infoCont li{
     margin-top: -31px;
     text-indent: 40px;
 }
+.textCont:hover{
+    text-shadow: 0 0 3px green;
+}
 
 footer nav .redesocial{
     display: block;
@@ -180,7 +182,12 @@ footer nav .redesocial li{
 
 footer nav .redesocial li a img{
     width: 45px;
+    transition: .3s;
 }
+footer nav .redesocial li a img:hover{
+    width: 60px;
+}
+
 
 /* EXTRAS */
 input{
@@ -322,27 +329,3 @@ label span{
         display: inline-flex;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
